# acontrol

./: README.md  acontrol.cabal  wincheck.sh
src/: Actions.hs  Db.hs  Hooks.hs  Main.hs  Types.hs  Utils.hs  Views.hs
src/Forms/: AddTask.hs  Common.hs  Login.hs  Register.hs
src/Model/: TaskState.hs  Types.hs
src/Views/: NoAccessPage.hs  NotLoginned.hs  PanelWithError.hs  Site.hs  TasksView.hs
static/css/: style.css
static/js/: bootstrap.min.js
templates/: addTask.tpl  loginForm.tpl  notloginned.tpl  pausedtask.tpl  registerForm.tpl  site.tpl  startedtask.tpl  stoppedtask.tpl  tasks_view.tpl  textpanel.tpl
